force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/InvoiceAdditionalChargeCredit__c.object-meta.xml
<CustomObject>
    <description>Related object to Invoice for Invoice Charges and Credits.</description>
    <label>Invoice Additional Charge/Credit</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Invoice Additional Charge/Credit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Additional Charges/Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>