force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/AdditionalChargeCredit__c.field-meta.xml
<CustomField>
    <fullName>AdditionalChargeCredit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Charge/Credit</label>
    <referenceTo>kugo2p__AdditionalChargeCredit__c</referenceTo>
    <relationshipLabel>Invoice Additional Charges/Credits</relationshipLabel>
    <relationshipName>Invoice_Additional_Charges_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>