force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/AdditionalChargeCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>AdditionalChargeCreditAmount__c</fullName>
    <formula>round(SalesPrice__c * Quantity__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Charge/Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>