force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/AppliedPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>AppliedPaymentAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Applied Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>