force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice Number</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Additional Charges/Credits</relationshipLabel>
    <relationshipName>Invoice_Additional_Charges_Credits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>