force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Number</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Invoice Additional Charges/Credits</relationshipLabel>
    <relationshipName>Invoice_Additional_Charges_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>