force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/SalesOrderAdditionalChargeCredit__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderAdditionalChargeCredit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Additional Charge/Credit</label>
    <referenceTo>SalesOrderAdditionalChargeCredit__c</referenceTo>
    <relationshipLabel>Invoice Additional Charges/Credits</relationshipLabel>
    <relationshipName>Invoice_Additional_Charges_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>