force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>IF(
OR(
TaxAmount__c &gt; 0,
VATAmount__c &gt; 0
),
&apos;Yes&apos;,
&apos;No&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax</label>
    <type>Text</type>
</CustomField>