force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/TaxableVAT__c.field-meta.xml
<CustomField>
    <fullName>TaxableVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable VAT/GST</label>
    <type>Checkbox</type>
</CustomField>