force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <formula>IF( AdditionalChargeCredit__r.kugo2p__TaxableSales__c ,( round(AdditionalChargeCreditAmount__c * TaxSalesRate__c,2 )), 0) +
IF( AdditionalChargeCredit__r.kugo2p__TaxableExcise__c ,( round(AdditionalChargeCreditAmount__c * TaxExciseRate__c,2) ),0) +
IF( AdditionalChargeCredit__r.kugo2p__TaxableUsage__c ,( round(AdditionalChargeCreditAmount__c * TaxUsageRate__c,2) ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>