force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/TaxExciseRate2__c.field-meta.xml
<CustomField>
    <fullName>TaxExciseRate2__c</fullName>
    <formula>SalesOrderAdditionalChargeCredit__r.TaxExciseRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Excise Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>