force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/TaxExciseRate__c.field-meta.xml
<CustomField>
    <fullName>TaxExciseRate__c</fullName>
    <label>Tax Excise Rate</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>