force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/TaxSalesRate2__c.field-meta.xml
<CustomField>
    <fullName>TaxSalesRate2__c</fullName>
    <formula>SalesOrderAdditionalChargeCredit__r.TaxSalesRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Sales Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>