force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/TaxSalesRate__c.field-meta.xml
<CustomField>
    <fullName>TaxSalesRate__c</fullName>
    <label>Tax Sales Rate</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>