force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/TaxUsageRate2__c.field-meta.xml
<CustomField>
    <fullName>TaxUsageRate2__c</fullName>
    <formula>SalesOrderAdditionalChargeCredit__r.TaxUsageRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Usage Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>