force-app/main/default/objects/InvoiceAdditionalChargeCredit__c/fields/VATAmount__c.field-meta.xml
<CustomField>
    <fullName>VATAmount__c</fullName>
    <formula>round(AdditionalChargeCreditAmount__c  *  VATRate__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT/GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>